src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--page-gutter: 1rem;
	--shell-width: 54rem;
	--content-width: 36rem;

	@media screen(sm) {
		--page-gutter: 2rem;
	}

	color-scheme: light dark;

	--color-base: 32deg 57% 95%;
	--color-surface: 32deg 57% 92%;
	--color-subtle: 206deg 23% 31%;
	--color-text: 206deg 23% 3%;
	--color-primary: 347deg 29% 59%;

	@media (prefers-color-scheme: dark) {
		--color-base: 333deg 5% 9%;
		--color-surface: 333deg 5% 14%;
		--color-subtle: 60deg 5% 62%;
		--color-text: 60deg 5% 94%;
		--color-primary: 347deg 50% 71%;
	}
}

html {
	@apply bg-base text-text antialiased;
}

[id] {
	@apply scroll-mt-3;
}

.formatted-content {
	& > * {
		@apply mt-3;
	}

	& > p {
		@apply leading-relaxed;
	}

	& > pre {
		@apply text-sm;
	}

	& > pre:not(:last-child) {
		@apply pb-3;
	}

	& a {
		@apply whitespace-pre-wrap break-words text-subtle underline underline-offset-2;
	}
}

